--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -29,7 +29,9 @@
         <activity android:name=".activities.ActivityInfo" />
         <activity android:name=".activities.ActivityPersons" />
         <activity android:name=".activities.ActivityBase" />
-        <activity android:name=".activities.ActivityCode"></activity>
+        <activity android:name=".activities.ActivityCode" />
+        <activity android:name=".activities.ActivityNFCRead" />
+        <activity android:name=".activities.ActivityNFCWrite"></activity>
     </application>
 
 </manifest>
