--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,6 +3,9 @@
     package="edu.kit.nfcrypto">
 
     <uses-permission android:name="android.permission.NFC" />
+    <uses-feature
+        android:name="android.hardware.nfc"
+        android:required="true" />
 
     <application
         android:allowBackup="true"
@@ -30,8 +33,28 @@
         <activity android:name=".activities.ActivityPersons" />
         <activity android:name=".activities.ActivityBase" />
         <activity android:name=".activities.ActivityCode" />
-        <activity android:name=".activities.ActivityNFCRead" />
-        <activity android:name=".activities.ActivityNFCWrite"></activity>
+        <activity android:name=".activities.ActivityNFCRead">
+            <intent-filter>
+                <action android:name="android.nfc.action.NDEF_DISCOVERED" />
+                <category android:name="android.intent.category.DEFAULT" />
+                <data
+                    android:host="ext"
+                    android:pathPrefix="/peterjohnwelcome.com:nfcapp"
+                    android:scheme="vnd.android.nfc" />
+            </intent-filter>
+        </activity>
+
+        <activity android:name=".activities.ActivityNFCWrite">
+            <intent-filter>
+                <action android:name="android.nfc.action.NDEF_DISCOVERED" />
+                <category android:name="android.intent.category.DEFAULT" />
+                <data
+                    android:host="ext"
+                    android:pathPrefix="/peterjohnwelcome.com:nfcapp"
+                    android:scheme="vnd.android.nfc" />
+            </intent-filter>
+        </activity>
+
     </application>
 
 </manifest>
