--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -24,15 +24,7 @@
         <activity
             android:name=".activities.ActivityAlice"
             android:label="Alice" />
-        <activity android:name=".activities.ActivityBob" />
-        <activity android:name=".activities.ActivityCryptotoolsCesar" />
-        <activity android:name=".activities.ActivityEncryptDetails" />
-        <activity android:name=".activities.ActivityEve" />
-        <activity android:name=".activities.ActivityInfo" />
-        <activity android:name=".activities.ActivityPersons" />
-        <activity android:name=".activities.ActivityBase" />
-        <activity android:name=".activities.ActivityCode" />
-        <activity android:name=".activities.ActivityNFCRead">
+        <activity android:name=".activities.ActivityBob">
             <intent-filter>
                 <action android:name="android.nfc.action.NDEF_DISCOVERED" />
                 <category android:name="android.intent.category.DEFAULT" />
@@ -41,6 +33,16 @@
                     android:pathPrefix="/peterjohnwelcome.com:nfcapp"
                     android:scheme="vnd.android.nfc" />
             </intent-filter>
+        </activity>
+        <activity android:name=".activities.ActivityCryptotoolsCesar" />
+        <activity android:name=".activities.ActivityEncryptDetails" />
+        <activity android:name=".activities.ActivityEve" />
+        <activity android:name=".activities.ActivityInfo" />
+        <activity android:name=".activities.ActivityPersons" />
+        <activity android:name=".activities.ActivityBase" />
+        <activity android:name=".activities.ActivityCode" />
+        <activity android:name=".activities.ActivityNFCRead">
+
         </activity>
 
         <activity android:name=".activities.ActivityNFCWrite">
